Rename LaunchIt to UPMEME and update references

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-# LaunchIt Frontend Environment (Vite)
+# UPMEME Frontend Environment (Vite)
 
 # Enable mock campaign/token data for local development
 VITE_USE_MOCK_DATA=false
