--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "viem": "^2.44.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
